--- a/css/style.css
+++ b/css/style.css
@@ -217,5 +217,5 @@ body{
 .loader .inner{
 	width: 100%;
 	height: 100%;
-	background: url(../icons/loaderf.png) center center no-repeat; 
+	background: url(../icons/loader.png) center center no-repeat; 
 }
