--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,64 @@ body{
 	content: '%';
 }
 
+.squareItem {
+	margin-top: 30px;
+    position: relative;
+}
+
+.squareInnerContainer {
+	position: relative;
+	padding: 50px 15px 35px;
+	text-align: center;
+	border: 2px solid #444;
+	border-top: none;
+}
+
+.squareInnerContainer:before,
+.squareInnerContainer:after {
+	content: '';
+	position: absolute;
+	top: 0px;
+	width: 30%;
+	border-bottom: 2px solid #444;
+}
+
+
+.squareInnerContainer:before {
+	right: 0px;
+}
+
+.squareInnerContainer:after {
+	left: 0px
+}
+
+
+.squareContent h2 {
+	font-size: 56px;
+	margin-bottom: 10px;
+	font-weight: 400;
+	color: #e74c3c;
+}
+
+.squareContent h3 {
+	font-size: 13px;
+	font-weight: 600;
+	margin: 0;
+}
+
+.squareIcon {
+	position: absolute;
+    left: 50%;
+    top: -30px;
+    width: 40%;
+    height: 60px;
+    font-size: 45px;
+    margin-left: -20%;
+    color: #444;
+}
+
 .contactSection {
-	padding-top: 60px;
+	padding-top: 10px;
 	padding-bottom: 0px;
 }
 
@@ -152,6 +208,10 @@ body{
 	background-color: #c23616;
 }
 
+.squareIcon {
+	color: #192a56;
+}
+
 .fontsAwesome a{
     color: #487eb0;
     display: inline-block;
@@ -163,7 +223,8 @@ body{
 .fa-facebook-official:hover,
 .fa-github:hover,
 .fa-linkedin-square:hover,
-.fa-instagram:hover {
+.fa-instagram:hover,
+.fa-envelope:hover {
     font-size: 60px;
     color: #192a56;
 }
