--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,20 @@
 body{
 	font-size: 14px;
 	color: #333;
-	background-color: #fff;
+	font-family: 'Cubano-Regular';
+	background: url('../img/pattern.jpg') center center;
 	letter-spacing: 1px;
+}
+
+/* FONT FACES */
+@font-face {
+    font-family: 'Cubano-Regular';
+    src: local('Cubano-Regular.otf'), url('Cubano-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Nunito-Regular';
+    src: local('Nunito-Regular.ttf'), url('Nunito-Regular.ttf') format('truetype');
 }
 
 .overlay{
@@ -80,6 +92,22 @@ body{
 	max-width: 100%;
 }
 
+.js-wp-1 {
+    opacity: 0;
+}
+
+.js-wp-1.animated {
+    opacity: 1;
+}
+
+.js-wp-2 {
+    opacity: 0;
+}
+
+.js-wp-2.animated {
+    opacity: 1;
+}
+
 .aboutText {
 	padding-top: 35px
 }
@@ -89,8 +117,100 @@ body{
 }
 
 .aboutText p{
+	font-family: 'Nunito-Regular';
 	text-align: center;
 }
+
+
+
+.section-timeline {
+    background-color: white;
+    padding-top: 5rem;
+}
+
+.timeline {
+    list-style: none;
+    padding: 20px 0 80px;
+    padding-top: 50px;
+    position: relative;
+}
+    
+.timeline:before {   /* GREY LINE */
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 3px;
+    background-color: #eeeeee;
+    left: 50%;
+    margin-left: -1.5px;
+}
+
+.timeline > li {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+    content: "";
+    display: table;
+}
+
+.timeline > li:after {
+    clear: both;
+}
+
+.timeline > li > .timeline-panel {
+    width: 50%;
+    float: left;
+    border: 1px solid #d4d4d4;
+    border-radius: 2px;
+    padding: 20px;
+    position: relative;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline p {
+    font-family: 'Nunito-Regular';
+    font-weight: 700;
+}
+
+
+.timeline > li:not(.timeline-inverted) {
+    padding-right: 90px;
+}
+
+.timeline > li.timeline-inverted {
+    padding-left: 90px;
+}
+
+.timeline > li > .timeline-badge {
+    font-size: 1rem; !important
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: rgba(19, 128, 36, 0.82);
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+    float: right;
+}
+
+.fa.fa-clock-o {
+    padding-right: 3px;
+}
+
 
 .owl-carousel {
     margin-top: 25px;
@@ -199,12 +319,16 @@ body{
     display: inline-block;
     margin-top: 20px;
     border: 2px solid #c23616;
+    transition: 0.5s;
     border-radius: 10px;
 }
 
-.contactButton:hover {
+.contactButton:hover,
+.contactButton:focus,
+.contactButton:active {
 	text-decoration: none;
 	color: #fff;
+	transition: 0.5s;
 	background-color: #c23616;
 }
 
@@ -217,6 +341,7 @@ body{
     display: inline-block;
     font-size: 50px;
     padding: 30px;
+    transition: 0.3s;
     padding-top: 50px;
 }
 
@@ -226,6 +351,7 @@ body{
 .fa-instagram:hover,
 .fa-envelope:hover {
     font-size: 60px;
+    transition: 0.3s;
     color: #192a56;
 }
 
@@ -258,6 +384,16 @@ body{
 .navbar-brand,
 .navbar-brand:hover{
 	color: #fff;
+}
+
+.navbar-nav li a {
+	border-bottom: 1px solid transparent;
+	transition: 0.5s;
+}
+
+.navbar-nav li a:hover {
+	border-bottom: 1px solid #487eb0;
+	transition: 0.5s;
 }
 
 .navbar-toggler-icon {
