--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*
+/* Color scheme used
 Light Blue : #487eb0
 Dark Blue : #192a56
-White : #FFFFFF
+White : #FFF
 */
 
 body{
@@ -10,6 +10,14 @@ body{
 	font-family: 'Nunito-Regular';
 	/*background: url('../img/pattern.jpg') center center;*/
 	letter-spacing: 1px;
+}
+
+.section{
+	padding: 100px 0;
+}
+
+.shadow {
+	box-shadow: 0 1em 1em -1em rgba(0, 0, 0, .25);
 }
 
 /* FONT FACES */
@@ -23,10 +31,34 @@ body{
     src: local('Nunito-Regular.ttf'), url('Nunito-Regular.ttf') format('truetype');
 }
 
-.contactText {
-	color: #192a56;
+@media screen and (max-width: 768px) {
+	.slides-navigation .prev,
+	.slides-navigation .next { visibility: hidden; }
+
+	.aboutText h4{
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
 }
 
+/* Loader Screen */
+.loader {
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 1000;
+}
+
+.loader .inner{
+	width: 100%;
+	height: 100%;
+	background: url(../icons/loader.png) center center no-repeat; 
+}
+
+/* Main Page */
 .overlay{
 	width: 100%;
 	height: 100%;
@@ -59,16 +91,6 @@ body{
 	background-image: url(../icons/next.png);
 }
 
-@media screen and (max-width: 768px) {
-	.slides-navigation .prev,
-	.slides-navigation .next { visibility: hidden; }
-
-	.aboutText h4{
-		margin-top: 20px;
-		margin-bottom: 10px;
-	}
-}
-
 .titleMessage{
 	position: absolute;
 	width: 100%;
@@ -94,36 +116,59 @@ body{
 	font-size: 23px;
 }
 
-.section{
-	padding: 100px 0;
+/* NavBar */
+#navigation {
+	background-color: #192a56;
+	padding: 20px 10px;
+	z-index: 100;
+	width: 100%;
+}
+
+#navigation li{
+	padding: 0 10px;
+}
+
+#navigation li a {
+	color: #fff;
+}
+
+.navbar-brand,
+.navbar-brand:hover{
+	color: #fff;
+}
+
+.navbar-nav li a {
+	border-bottom: 1px solid transparent;
+	transition: 0.5s;
+}
+
+.navbar-nav li a:hover {
+	border-bottom: 1px solid #487eb0;
+	transition: 0.5s;
+}
+
+.navbar-toggler-icon {
+	background: url(../icons/menu.png);
+	background-size: 100%;
+}
+
+.fixedNav #navigation{
+	position: fixed;
+	top: 0;
+}
+
+/* About Me */
+.aboutClass {
+	background: #487eb0;
 }
 
 .aboutImage {
 	max-width: 100%;
 }
 
-.js-wp-1 {
-    opacity: 0;
-}
-
-.js-wp-1.animated {
-    opacity: 1;
-}
-
-.js-wp-2 {
-    opacity: 0;
-}
-
-.js-wp-2.animated {
-    opacity: 1;
-}
-
-.shadow {
-	box-shadow: 0 1em 1em -1em rgba(0, 0, 0, .25);
-}
-
 .aboutText {
-	padding-top: 35px
+	color: #fff;
+	padding-top: 25px
 }
 
 .aboutText h4{
@@ -134,6 +179,11 @@ body{
 	font-family: 'Nunito-Regular';
 	size: 10px;
 	text-align: center;
+}
+
+/* Professional Summary */
+.experienceSection {
+	padding-bottom: 10px;
 }
 
 .fa-building-o {
@@ -236,10 +286,10 @@ body{
     float: right;
 }
 
+/* Skills Section */
 .fa.fa-clock-o {
     padding-right: 3px;
 }
-
 
 .owl-carousel {
     margin-top: 25px;
@@ -337,21 +387,23 @@ body{
     color: #444;
 }
 
-.experienceSection {
-	padding-bottom: 10px;
-}
-
+/* Contact */
 .contactSection {
 	padding-top: 60px;
+	background: #487eb0;
 	padding-bottom: 30px;
 }
 
+.contactText {
+	color: #fff;
+}
+
 .contactButton {
-	color: #c23616;
+	color: #fff;
     padding: 15px 20px;
     display: inline-block;
     margin-top: 20px;
-    border: 2px solid #c23616;
+    border: 2px solid #fff;
     transition: 0.5s;
     border-radius: 10px;
 }
@@ -361,6 +413,7 @@ body{
 .contactButton:active {
 	text-decoration: none;
 	color: #fff;
+	border: 2px solid #c23616;
 	transition: 0.5s;
 	background-color: #c23616;
 }
@@ -370,7 +423,7 @@ body{
 }
 
 .fontsAwesome a{
-    color: #487eb0;
+    color: #fff;
     display: inline-block;
     font-size: 50px;
     padding: 30px;
@@ -383,15 +436,16 @@ body{
 .fa-linkedin-square:hover,
 .fa-instagram:hover,
 .fa-envelope:hover {
-    font-size: 60px;
+    /*font-size: 60px;
+        color: #192a56; */
     transition: 0.3s;
-    color: #192a56;
 }
 
 .fa-heart {
     color: red;
 }
 
+/* Copyright */
 .copyrightSection {
 	background-color: #000;
 	color: #fff;
@@ -400,60 +454,4 @@ body{
 
 .copyrightSection p{
 	margin: 0;
-}
-
-#navigation {
-	background-color: #192a56;
-	padding: 20px 10px;
-	z-index: 100;
-	width: 100%;
-}
-
-#navigation li{
-	padding: 0 10px;
-}
-
-#navigation li a {
-	color: #fff;
-}
-
-.navbar-brand,
-.navbar-brand:hover{
-	color: #fff;
-}
-
-.navbar-nav li a {
-	border-bottom: 1px solid transparent;
-	transition: 0.5s;
-}
-
-.navbar-nav li a:hover {
-	border-bottom: 1px solid #487eb0;
-	transition: 0.5s;
-}
-
-.navbar-toggler-icon {
-	background: url(../icons/menu.png);
-	background-size: 100%;
-}
-
-.fixedNav #navigation{
-	position: fixed;
-	top: 0;
-}
-
-.loader {
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	z-index: 1000;
-}
-
-.loader .inner{
-	width: 100%;
-	height: 100%;
-	background: url(../icons/loader.png) center center no-repeat; 
 }
