--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@ Light Blue : #487eb0
 Dark Blue : #192a56
 White : #FFF
 */
+:root{
+	--white: #FFF;
+	--red: #c23616;
+	--primary-color: #487eb0;
+	--secondary-color: #192a56;
+}
 
 body{
 	font-size: 14px;
@@ -45,7 +51,7 @@ body{
 .loader {
 	width: 100%;
 	height: 100%;
-	background-color: #fff;
+	background-color: var(--white);
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -102,7 +108,7 @@ body{
 }
 
 .titleMessage .heading p {
-	color: #fff;
+	color: var(--white);
 	text-shadow: 0px 2px 5px rgba(0,0,0,0.4);
 	font-weight: 100;
 	letter-spacing: 8px;
@@ -118,7 +124,7 @@ body{
 
 /* NavBar */
 #navigation {
-	background-color: #192a56;
+	background-color: var(--secondary-color);
 	padding: 20px 10px;
 	z-index: 100;
 	width: 100%;
@@ -129,12 +135,12 @@ body{
 }
 
 #navigation li a {
-	color: #fff;
+	color: var(--white);
 }
 
 .navbar-brand,
 .navbar-brand:hover{
-	color: #fff;
+	color: var(--white);
 }
 
 .navbar-nav li a {
@@ -143,7 +149,7 @@ body{
 }
 
 .navbar-nav li a:hover {
-	border-bottom: 1px solid #487eb0;
+	border-bottom: 1px solid var(--primary-color);
 	transition: 0.5s;
 }
 
@@ -159,7 +165,7 @@ body{
 
 /* About Me */
 .aboutClass {
-	background: #487eb0;
+	background: var(--primary-color);
 }
 
 .aboutImage {
@@ -167,7 +173,7 @@ body{
 }
 
 .aboutText {
-	color: #fff;
+	color: var(--white);
 	padding-top: 25px
 }
 
@@ -187,7 +193,7 @@ body{
 }
 
 .fa-building-o {
-	color: #192a56;
+	color: var(--secondary-color);
 }
 
 .section-timeline {
@@ -197,7 +203,7 @@ body{
 
 .heading {
 	text-align: center!important;
-	color: #192a56;
+	color: var(--secondary-color);
 	font-size: 2rem;
 }
 
@@ -275,7 +281,7 @@ body{
     top: 16px;
     left: 50%;
     margin-left: -25px;
-    background-color: #487eb0;
+    background-color: var(--primary-color);
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
     border-bottom-right-radius: 50%;
@@ -296,8 +302,8 @@ body{
 }
 
 .skillsSection {
-	background-color: #487eb0;
-	color: #fff;
+	background-color: var(--primary-color);
+	color: var(--white);
 }
 
 .skill{
@@ -321,7 +327,7 @@ body{
 }
 
 .chart .percent {
-	color: #fff;
+	color: var(--white);
 	line-height: 152px;
 	display: inline-block;
 	font-size: 35px;
@@ -329,6 +335,11 @@ body{
 
 .chart .percent:after {
 	content: '%';
+}
+
+/* Stats Section*/
+.statsSection {
+	padding-bottom: 120px;
 }
 
 .squareItem {
@@ -388,21 +399,21 @@ body{
 
 /* Contact */
 .contactSection {
-	padding-top: 60px;
-	background: #487eb0;
-	padding-bottom: 30px;
+	padding-top: 40px;
+	background: var(--secondary-color);
+	padding-bottom: 0px;
 }
 
 .contactText {
-	color: #fff;
+	color: var(--white);
 }
 
 .contactButton {
-	color: #fff;
+	color: var(--white);
     padding: 15px 20px;
     display: inline-block;
     margin-top: 20px;
-    border: 2px solid #fff;
+    border: 2px solid var(--white);
     transition: 0.5s;
     border-radius: 10px;
 }
@@ -411,18 +422,18 @@ body{
 .contactButton:focus,
 .contactButton:active {
 	text-decoration: none;
-	color: #fff;
-	border: 2px solid #c23616;
+	color: var(--white);
+	border: 2px solid var(--red);
 	transition: 0.5s;
-	background-color: #c23616;
+	background-color: var(--red);
 }
 
 .squareIcon {
-	color: #192a56;
+	color: var(--secondary-color);
 }
 
 .fontsAwesome a{
-    color: #fff;
+    color: var(--white);
     display: inline-block;
     font-size: 50px;
     padding: 30px;
@@ -436,18 +447,18 @@ body{
 .fa-instagram:hover,
 .fa-envelope:hover {
     /*font-size: 60px;
-        color: #192a56; */
+    color: var(--primary-color);*/
     transition: 0.3s;
 }
 
 .fa-heart {
-    color: red;
+    color: var(--red);
 }
 
 /* Copyright */
 .copyrightSection {
 	background-color: #000;
-	color: #fff;
+	color: var(--white);
 	padding: 30px 5px;
 }
 
