--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,8 @@ body{
 .fa-github:hover,
 .fa-linkedin-square:hover,
 .fa-instagram:hover,
-.fa-envelope:hover {
+.fa-envelope:hover,
+.fa-twitter {
     /*font-size: 60px;
     color: var(--primary-color);*/
     transition: 0.3s;
