--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,19 @@ Dark Blue : #192a56
 White : #FFF
 */
 :root{
+	--primary-color: #0B0C10;
+	--secondary-color: #0B0C10;
 	--white: #FFF;
 	--red: #c23616;
-	--primary-color: #487eb0;
-	--secondary-color: #192a56;
+	--darkblue: #192a56;
+	--cyan: #487eb0;
+	--darkgreen: #173e43;
+	--teal: #66FCF1;
+	--darkteal: #45A29E;
+	--grey: #dddfd4;
+	--black: #0B0C10;
+	--darkgrey: #1F2833;
+	--lightgrey: #C5C6C7;
 }
 
 body{
@@ -51,7 +60,7 @@ body{
 .loader {
 	width: 100%;
 	height: 100%;
-	background-color: var(--white);
+	background-color: var(--secondary-color);
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -61,7 +70,7 @@ body{
 .loader .inner{
 	width: 100%;
 	height: 100%;
-	background: url(../icons/loader.png) center center no-repeat; 
+	background: url(../icons/2.gif) center center no-repeat; 
 }
 
 /* Main Page */
@@ -70,7 +79,7 @@ body{
 	height: 100%;
 	position: absolute;
 	z-index: 3;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.7);
 }
 
 .slides-navigation{
@@ -149,7 +158,7 @@ body{
 }
 
 .navbar-nav li a:hover {
-	border-bottom: 1px solid var(--primary-color);
+	border-bottom: 1px solid var(--teal);
 	transition: 0.5s;
 }
 
@@ -165,7 +174,7 @@ body{
 
 /* About Me */
 .aboutClass {
-	background: var(--primary-color);
+	background: var(--secondary-color);
 }
 
 .aboutImage {
@@ -304,7 +313,7 @@ body{
 }
 
 .skillsSection {
-	background-color: var(--primary-color);
+	background-color: var(--black);
 	color: var(--white);
 }
 
@@ -330,7 +339,7 @@ body{
 
 .chart .percent {
 	text-align: center;
-	color: var(--white);
+	color: var(--teal);
 	line-height: 152px;
 	display: inline-block;
 	font-size: 35px;
@@ -404,7 +413,7 @@ body{
 /* Contact */
 .contactSection {
 	padding-top: 40px;
-	background: var(--secondary-color);
+	background: var(--black);
 	padding-bottom: 0px;
 }
 
@@ -417,7 +426,7 @@ body{
     padding: 15px 20px;
     display: inline-block;
     margin-top: 20px;
-    border: 2px solid var(--white);
+    border: 2px solid var(--teal);
     transition: 0.5s;
     border-radius: 10px;
 }
@@ -426,10 +435,10 @@ body{
 .contactButton:focus,
 .contactButton:active {
 	text-decoration: none;
-	color: var(--white);
-	border: 2px solid var(--red);
+	color: var(--black);
+	border: 2px solid var(--teal);
 	transition: 0.5s;
-	background-color: var(--red);
+	background-color: var(--teal);
 }
 
 .squareIcon {
@@ -437,7 +446,7 @@ body{
 }
 
 .fontsAwesome a{
-    color: var(--white);
+    color: var(--teal);
     display: inline-block;
     font-size: 50px;
     padding: 30px;
@@ -457,13 +466,13 @@ body{
 }
 
 .fa-heart {
-    color: var(--red);
+    color: var(--teal);
 }
 
 /* Copyright */
 .copyrightSection {
-	background-color: #000;
-	color: var(--white);
+	background-color: var(--black);
+	color: var(--teal);
 	padding: 30px 5px;
 }
 
